--- a/AdaptationFinder/src/styles.css
+++ b/AdaptationFinder/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+/* Add your styling for your elements here (This is global) */
+
+*{padding : 0; margin : 0; box-sizing: border-box;}
+
+body{height : 900px;}
+
+header {
+   background: url('http://4.bp.blogspot.com/-F55rT05g7jU/VHUii6yeo9I/AAAAAAAATaw/G3NVJRLBABI/s1600/2014%2BCrime%2BNovel%2BCover%2BCollage.jpg');
+   text-align: center;
+   width: 100%;
+   height: auto;
+   background-size: cover;
+   background-attachment: fixed;
+   position: relative;
+   overflow: hidden;
+   border-radius: 0 0 85% 85% / 30%;
+}
+
+header .overlay{
+   width: 100%;
+   height: 100%;
+   padding: 50px;
+   color: #FFF;
+   text-shadow: 1px 1px 1px #333;
+   background-color: rgb(50, 56, 59, 0.8);
+   /* linear-gradient(135deg, #669999 100%, #fd5e086b 10%); */
+
+}
+
