--- a/AdaptationFinder/src/app/matgrid/matgrid.component.html
+++ b/AdaptationFinder/src/app/matgrid/matgrid.component.html
@@ -1,4 +1,4 @@
-
+<div align="center">
 <mat-grid-list class="gridlist" [style.border]="'2px double #000'" cols="2" rowHeight="3:1">
     <mat-grid-tile [style.border]="'2px double #000'">Movie poster><img src='http://4.bp.blogspot.com/-F55rT05g7jU/VHUii6yeo9I/AAAAAAAATaw/G3NVJRLBABI/s1600/2014%2BCrime%2BNovel%2BCover%2BCollage.jpg'>
     </mat-grid-tile>
@@ -7,4 +7,4 @@
     <mat-grid-tile [style.border]="'2px double #000'">Book info</mat-grid-tile>
 </mat-grid-list>
 
-
+</div>
