added a new fancy tab bar that should be populated with API-results

--- a/AdaptationFinder/src/app/app.component.html
+++ b/AdaptationFinder/src/app/app.component.html
@@ -1,11 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-    <mat-divider [style.background]="'red'"></mat-divider>
     <app-search-bar></app-search-bar>
     <mat-divider></mat-divider>
-    <app-matgrid ></app-matgrid>
-  </h1>
+    <app-listview></app-listview>
+    <app-matgrid></app-matgrid>
 </div>
 <router-outlet></router-outlet>
