book and movie list

--- a/AdaptationFinder/src/app/listview/listview.component.html
+++ b/AdaptationFinder/src/app/listview/listview.component.html
@@ -1,13 +1,10 @@
 <mat-tab-group>
   <mat-tab label="Books">
-     <ul>
-	     <li *ngFor= "let b of books">{{b}}</li>
-     </ul>
+    <br/>
+    <app-boovietable></app-boovietable>
   </mat-tab>
   <mat-tab label="Movies">
-    <ul>
-	    <li *ngFor= "let m of movies">{{m}}</li>
-    </ul>
+    <br/>
+    <app-boovietable></app-boovietable>
   </mat-tab>
-
-</mat-tab-group>
+</mat-tab-group><br/>
