--- a/AdaptationFinder/src/styles.css
+++ b/AdaptationFinder/src/styles.css
@@ -6,7 +6,8 @@ body{height : 900px;}
 
 
 header {
-   background: url('http://4.bp.blogspot.com/-F55rT05g7jU/VHUii6yeo9I/AAAAAAAATaw/G3NVJRLBABI/s1600/2014%2BCrime%2BNovel%2BCover%2BCollage.jpg');
+   background: url(https://external-preview.redd.it/-DobWIgRbcMv7FJUmWeen-Cj1V4m2QWWkZ1VMciK3uA.jpg?auto=webp&s=9a81025dbd9698379b49060271b1455d5d874e1b);
+   background-position: 100px 350px;
    text-align: center;
    width: 100%;
    height: auto;
