Lists are not popultated, its gorgeus

--- a/AdaptationFinder/src/app/listview/listview.component.html
+++ b/AdaptationFinder/src/app/listview/listview.component.html
@@ -1,10 +1,10 @@
 <mat-tab-group>
   <mat-tab label="Books">
     <br/>
-    <app-boovietable></app-boovietable>
+    <app-booktable [books] = "rs.books"></app-booktable>
   </mat-tab>
   <mat-tab label="Movies">
     <br/>
-    <app-boovietable></app-boovietable>
+    <app-movietable [movies] = "rs.movies"></app-movietable>
   </mat-tab>
 </mat-tab-group><br/>
