--- a/AdaptationFinder/src/app/booktable/booktable.component.html
+++ b/AdaptationFinder/src/app/booktable/booktable.component.html
@@ -8,14 +8,14 @@
     </ng-container>
     
     <!-- Author Column -->
-    <ng-container matColumnDef="author">
+    <ng-container matColumnDef="author_name">
       <th mat-header-cell *matHeaderCellDef>Author</th>
-      <td mat-cell *matCellDef="let book"> {{book.author}} </td>
+      <td mat-cell *matCellDef="let book"> {{book.author_name}} </td>
     </ng-container>
 
     <!-- isbn Column -->
     <ng-container matColumnDef="isbn">
-      <th mat-header-cell *matHeaderCellDef>isbn </th>
+      <th mat-header-cell *matHeaderCellDef>ISBN </th>
       <td mat-cell *matCellDef="let book"> {{book.isbn}} </td>
     </ng-container>
 
