--- a/AdaptationFinder/src/app/movietable/movietable.component.html
+++ b/AdaptationFinder/src/app/movietable/movietable.component.html
@@ -2,21 +2,21 @@
   <table mat-table [dataSource]="movies" class="mat-elevation-z8" style="margin: 15px;">
 
     <!-- Title  Column -->
-    <ng-container matColumnDef="title">
+    <ng-container matColumnDef="Title">
       <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef="let movie"> {{movie.title}} </td>
+      <td mat-cell *matCellDef="let movie"> {{movie.Title}} </td>
     </ng-container>
     
     <!-- Author Column -->
-    <ng-container matColumnDef="director">
-      <th mat-header-cell *matHeaderCellDef>Director</th>
-      <td mat-cell *matCellDef="let movie"> {{movie.director}} </td>
+    <ng-container matColumnDef="Year">
+      <th mat-header-cell *matHeaderCellDef>Year</th>
+      <td mat-cell *matCellDef="let movie"> {{movie.Year}} </td>
     </ng-container>
 
     <!-- isbn Column -->
-    <ng-container matColumnDef="imdb">
+    <ng-container matColumnDef="imdbID">
       <th mat-header-cell *matHeaderCellDef>IMDB</th>
-      <td mat-cell *matCellDef="let movie"> {{movie.imdb}} </td>
+      <td mat-cell *matCellDef="let movie"> {{movie.imdbID}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns" class= "noHover"></tr>
