--- a/AdaptationFinder/src/app/coupler/couplerInput.component.css
+++ b/AdaptationFinder/src/app/coupler/couplerInput.component.css
@@ -1,13 +1,13 @@
-.example-radio-group {
+.book-list {
   display: inline-flex;
   flex-direction: column;
 }
-
+.movie-list{
+  display: inline-flex;
+  flex-direction: column;
+}
 .example-radio-button {
   margin: 5px;
-}
-.example-radio-button:checked{
-  color: blue;
 }
 .example-selected-value {
   margin: 15px 0;
