--- a/AdaptationFinder/src/app/coupler/couplerInput.component.html
+++ b/AdaptationFinder/src/app/coupler/couplerInput.component.html
@@ -9,13 +9,13 @@
   </tr>
   <tr>
     <td>
-    <mat-radio-group class="example-radio-group" [(ngModel)]="favoriteSeason">
+    <mat-radio-group class="book-list" [(ngModel)]="book-list">
   <mat-radio-button color="primary" class="example-radio-button" *ngFor="let season of seasons" [value]="season">
     {{season}}
   </mat-radio-button>
     </mat-radio-group></td>	 
     <td>			 
-    <mat-radio-group class="example-radio-group" [(ngModel)]="favoriteSeason">
+    <mat-radio-group class="movie-list" [(ngModel)]="movie-list">
   <mat-radio-button color="primary"  class="example-radio-button" *ngFor="let season of seasons" [value]="season">
     {{season}}
   </mat-radio-button>
