--- a/AdaptationFinder/src/app/boovietable/boovietable.component.html
+++ b/AdaptationFinder/src/app/boovietable/boovietable.component.html
@@ -8,9 +8,9 @@
     </ng-container>
     
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"(click)="onClick()"> {{element.name}} </td>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <td mat-cell *matCellDef="let element"(click)="openDialog()"> {{element.title}} </td>
     </ng-container>
 
     <!-- imdb Column -->
