--- a/AdaptationFinder/src/app/coupler/couplerInput.component.html
+++ b/AdaptationFinder/src/app/coupler/couplerInput.component.html
@@ -20,4 +20,7 @@
     </mat-radio-group></td>
   </tr>
 </table>
+    <div align="center">
+      <button mat-raised-button color="primary">Submit connection</button>
+    </div>
 </div>
