--- a/AdaptationFinder/src/app/coupler/couplerInput.component.html
+++ b/AdaptationFinder/src/app/coupler/couplerInput.component.html
@@ -10,17 +10,17 @@
   <tr>
     <td valign="top">
     <mat-radio-group class="book-list" [(ngModel)]="book-list">
-  <mat-radio-button color="primary" class="wrap" *ngFor="let book of books" [value]="book.title"> <span class = "wrap">{{book.title +  " | " + book.author_name}} </span>
+  <mat-radio-button color="primary" class="wrap" *ngFor="let book of books" [value]="book.isbn" (change) = "changeBook()"> <span class = "wrap">{{book.title +  " | " + book.author_name}} </span>
   </mat-radio-button>
     </mat-radio-group></td>	 
     <td valign="top">			 
     <mat-radio-group class="movie-list" [(ngModel)]="movie-list">
-  <mat-radio-button color="primary" class="wrap" *ngFor="let movie of movies" [value]="movie.Title"><span class ="wrap"> {{movie.Title + " | " + movie.Year}} </span>
+  <mat-radio-button color="primary" class="wrap" *ngFor="let movie of movies" [value]="movie.imdbID" (change) = "changeMovie()" ><span class ="wrap"> {{movie.Title + " | " + movie.Year}} </span>
   </mat-radio-button>
     </mat-radio-group></td>
   </tr>
 </table>
     <div align="center">
-      <button mat-raised-button color="primary">Submit connection</button>
+      <button mat-raised-button color="primary"(submit)="databaseSubmit()" >Submit connection</button>
     </div>
 </div>
