resolved a comparison issue

--- a/AdaptationFinder/src/app/coupler/couplerInput.component.html
+++ b/AdaptationFinder/src/app/coupler/couplerInput.component.html
@@ -21,6 +21,6 @@
   </tr>
 </table>
     <div align="center">
-      <button mat-raised-button color="primary"(submit)="databaseSubmit()" >Submit connection</button>
+      <button mat-raised-button color="primary"(click)="databaseSubmit($event)" >Submit connection</button>
     </div>
 </div>
