--- a/AdaptationFinder/src/app/booktable/booktable.component.html
+++ b/AdaptationFinder/src/app/booktable/booktable.component.html
@@ -20,7 +20,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns" class = "noHover"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"(click)="openDialog()"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"(click)="openDialog(row)"></tr>
 
   </table>
 </div>
