aded cover/poster and plots for chosen book/movie

--- a/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
+++ b/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
@@ -1,8 +1,17 @@
 .dialog {
-    height: 500px;;
-    width: 500px;
+    height: 100%;
+    width: 100%;
 }
 
 .card {
-    size: 400px;
+    size: 100%;
+}
+
+.myimg {
+    float: left;
+}
+
+.head {
+    position: relative;
+    left: 15px;
 }
