added connections to dialog

--- a/AdaptationFinder/src/app/dialog-window/dialog-window.component.html
+++ b/AdaptationFinder/src/app/dialog-window/dialog-window.component.html
@@ -1,13 +1,14 @@
 <div mat-dialog-content class="dialog">
   <mat-card-title class="card"> {{ data.title }} </mat-card-title><br/>	
-    <mat-card-subtitle> Director: {{ data.maker }}</mat-card-subtitle>
+  <mat-card-subtitle> {{ data.maker }}</mat-card-subtitle>
     <br/>
       <mat-card-content>	
         <img mat-card-image src="{{ data.poster }}" class="myimg"/>
-        <h3 class="head">{{ data.plot }}</h3><br />
+        <h3 class="head">{{ data.plot }}</h3><br /><br />
+        <p class ="connections" *ngFor="let c of data.conn"> {{ c.title }} </p>
       </mat-card-content><br />
-
-  <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Close</button>
-  </div>
+    
+</div>
+<div mat-dialog-action class="mybttn">
+  <button mat-button (click)="onNoClick()">Close</button>
 </div>
