added link to imdb and connections

--- a/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
+++ b/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
@@ -11,9 +11,19 @@
     float: left;
 }
 
-.head {
+.plot {
     position: relative;
     left: 15px;
+}
+
+.adaptionheader {
+    position: relative;
+    left: 15px;
+}
+
+.connections {
+    position: relative;
+    left: 30px;
 }
 
 .mybttn {
