added poster/cover and paceholders into the list. added a not found placeholder to the diaglogue popup. added type to the movies list. configured routing to make the search results linkable.

--- a/AdaptationFinder/src/app/booktable/booktable.component.html
+++ b/AdaptationFinder/src/app/booktable/booktable.component.html
@@ -1,12 +1,19 @@
 <div align='middle'>
   <table mat-table [dataSource]="books" class="mat-elevation-z8" style="margin: 15px;">
 
+    <ng-container matColumnDef="cover">
+      <th mat-header-cell *matHeaderCellDef>Cover</th>
+      <td mat-cell *matCellDef="let book">
+        <img src="{{book.cover}}" />
+      </td>
+    </ng-container>
+
     <!-- Title  Column -->
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let book"> {{book.title}} </td>
     </ng-container>
-    
+
     <!-- Author Column -->
     <ng-container matColumnDef="author_name">
       <th mat-header-cell *matHeaderCellDef>Author</th>
