--- a/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
+++ b/AdaptationFinder/src/app/dialog-window/dialog-window.component.css
@@ -1,10 +1,5 @@
 .dialog {
-    height: 100%;
-    width: 100%;
-}
-
-.card {
-    size: 100%;
+  min-width: 70vw;
 }
 
 .myimg {
@@ -13,23 +8,9 @@
   background-size: contain;
   background-repeat: no-repeat;
   float: left;
+  padding-right: 24px;
 }
 
-.plot {
-    position: relative;
-    left: 15px;
-}
+.info {
 
-.adaptionheader {
-    position: relative;
-    left: 15px;
-}
-
-.connections {
-    position: relative;
-    left: 30px;
-}
-
-.mybttn {
-    float: right;
 }
