--- a/AdaptationFinder/src/app/dialog-window/dialog-window.component.html
+++ b/AdaptationFinder/src/app/dialog-window/dialog-window.component.html
@@ -1,21 +1,20 @@
 <div mat-dialog-content class="dialog">
-  <mat-card-title class="card"> {{ data.title }} </mat-card-title><br/>	
+  <mat-card-title> {{ data.title }} </mat-card-title><br/>
   <mat-card-subtitle> {{ data.maker }}</mat-card-subtitle>
     <br/>
-      <mat-card-content>	
+      <mat-card-content class="card">
         <img mat-card-image src="{{ data.poster }}" class="myimg"/>
+        <div class="info">
         <h3 class="plot">{{ data.plot }}</h3><br /><br />
         <h2 class="adaptionheader">Adaptions in our database:</h2>
         <ul class="connections" *ngFor="let c of data.connections">
           <li><a href="{{c.url}}"> {{ c.title }} </a></li>
         </ul>
+        </div>
       </mat-card-content><br />
-    
+
 </div><br />
 <div>
   <h3>Link:</h3>
-  <a class="imdblink" href="{{ data.link }}"> {{ data.link }}</a> 
-</div>
-<div mat-dialog-action class="mybttn">
-  <button mat-button (click)="onNoClick()">Close</button>
+  <a class="imdblink" href="{{ data.link }}"> {{ data.link }}</a>
 </div>
